@@ -204,8 +204,10 @@ EXTRA_DIST += \
 xetex_tests = \
 	xetexdir/xetex-filedump.test \
 	xetexdir/xetex-bug73.test \
-	xetexdir/xetex.test
-xetexdir/xetex-filedump.log xetexdir/xetex-bug73.log xetexdir/xetex.log: xetex$(EXEEXT)
+	xetexdir/xetex.test \
+	xetexdir/wcfname.test
+xetexdir/xetex-filedump.log xetexdir/xetex-bug73.log xetexdir/xetex.log \
+  xetexdir/wcfname.log: xetex$(EXEEXT)
 
 EXTRA_DIST += $(xetex_tests)
 
@@ -220,5 +222,8 @@ DISTCLEANFILES += bug73.fmt bug73.log bug73.out bug73.tex
 ## xetex-filedump.test
 EXTRA_DIST += xetexdir/tests/filedump.log xetexdir/tests/filedump.tex
 DISTCLEANFILES += filedump.log filedump.out filedump.tex
+
+## wcfname.test
+DISTCLEANFILES += xetests/fn*.*
 
 # (end of xetex.am)
